JSW Devsb/src/objects/NSR_Other_Values__c.object
<CustomObject>
    <fields>
        <fullName>Code_Formula__c</fullName>
        <formula>District_Code__c +&apos;:&apos;+ Product__c+&apos;:&apos;+distribution_Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <label>District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>NSR Other Values</relationshipLabel>
        <relationshipName>NSR_Other_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Value__c</fullName>
        <label>Other Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NSR Other Values</relationshipLabel>
        <relationshipName>NSR_Other_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Processed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_for_Duplicates__c</fullName>
        <label>Unique for Duplicates</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>distribution_Channel__c</fullName>
        <label>distribution Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>NSR Other Values</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Other-{000000000}</displayFormat>
        <label>NSR Other Values Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSR Other Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>